# py-graph-match

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  test_build_donors_graph.py  test_matching.py
.github/workflows/: pythonpublish.yml
conf/: minimal-configuration.json
data/: hpf.csv
data/donors_dir/: donors.txt
grma/: __init__.py
grma/donorsgraph/: build_donors_graph.py  create_lol.py
grma/match/: donors_matching.py  graph_wrapper.py  lol_graph.pyx  match.py
grma/utilities/: cutils.pyx
my_project_template/: __init__.py
