[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29.32", "numpy>=1.20.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py-graph-match-temp"
version = "0.0.9"
description = "A Python package for graph matching."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
  { name = "Regev Yehezkel Imra", email = "regevel2006@gmail.com" }
]
dependencies = [
  "toml>=0.10.2",
  "py-graph-imputation>=0.0.12",
  "py-ard>=1.0.9",
  "tqdm>=4.66.1",
]

[project.optional-dependencies]
tests = [
  "pytest>=7.1.2",
  "behave>=1.2.6",
  "PyHamcrest>=2.0.3",
]
dev = [
  "allure-behave>=2.9.45",
  "flake8>=4.0.1",
  "bump2version>=1.0.1",
  "coverage>=6.3.2",
  "pre-commit>=2.18.1",
]
deploy = [
  "connexion[swagger-ui]>=2.13.0",
  "gunicorn>=20.1.0",
]
